--- a/_posts/2020-04-27-covid-19.md
+++ b/_posts/2020-04-27-covid-19.md
@@ -2,7 +2,7 @@
 layout: post
 title: COVID-19
 date: 2020-04-27
-permalink: /covid19/
+redirect-from: /covid19
 categories: [notice]
 
 # if display on every page
