--- a/_posts/2020-04-27-covid-19.md
+++ b/_posts/2020-04-27-covid-19.md
@@ -27,7 +27,7 @@ Przyjmowanie zupełnie nowych osób jest wstrzymane.
 Jeżeli uważasz, że powinieneś być już członkiem i wspomagałeś nas przed rozpoczęciem pandemii, skontaktuj się z kimś kto jest w stanie zaproponować twoje [członkostwo](/membership/).
 
 ## Działalność
-Grupa osób wspomaga akcję [Na Ratunek Pomorskie](https://new.wiki.hs3.pl/index.php/Przy%C5%82bice_Prusa_Pomorskie).
+Grupa osób wspomaga akcję [Na Ratunek Pomorskie](https://new.wiki.hs3.pl/index.php/Przy%C5%82bice_Prusa_Pomorskie){:target="_blank"}.
 Udostępnialiśmy przestrzeń do składowania i dystrybucji masek dla szpitali, nieodpłatnie.
 
 ![249 face shields, computer generated, rgb glitch](/assets/images/covid-19/face_shield_rgb_glitch.png)
