--- a/_posts/2020-04-27-covid-19.md
+++ b/_posts/2020-04-27-covid-19.md
@@ -2,7 +2,9 @@
 layout: post
 title: COVID-19
 date: 2020-04-27
-redirect_from: /covid19
+redirect_from:
+  - /notice/2020/04/27/covid-19.html
+  - /covid19
 categories: [notice]
 
 # if display on every page
