--- a/_posts/2020-04-27-covid-19.md
+++ b/_posts/2020-04-27-covid-19.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: COVID-19
+title: COVID-19 a Hackerspace
 date: 2020-04-27
 redirect_from:
   - /notice/2020/04/27/covid-19.html
@@ -9,8 +9,6 @@ categories: [notice]
 
 # if display on every page
 pinned: true
-
-# bootstrap class
 alert: danger
 ---
 
