add banner and desciption parameter to posts and pages

--- a/_posts/2020-04-27-covid-19.md
+++ b/_posts/2020-04-27-covid-19.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+banner: /assets/images/covid-19/face_shield_rgb_glitch.png
 title: COVID-19 a Hackerspace
 date: 2020-04-27
 redirect_from:
